adding client and server

--- a/Front-End/src/components/Hero/Hero.css
+++ b/Front-End/src/components/Hero/Hero.css
@@ -1,8 +1,10 @@
 .hero-wrapper {
-  color: white;
+  color: yellowgreen;
   position: relative;
   z-index: 1;
   padding-bottom: 2rem;
+  
+
 }
 
 
@@ -64,7 +66,7 @@
   width: 30rem;
   height: 35rem;
   overflow: hidden;
-  border-radius: 15rem 15rem 0 0;
+  border-radius: 15rem 15rem 15rem 0;
   border: 8px solid rgba(255, 255, 255, 0.12);
 }
 .image-container>img{
