--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -7,6 +7,7 @@
   --blue: #4066ff;
   --lightBlue: #eeeeff;
   --shadow: 0px 23px 21px -8px rgba(136, 160, 255, 0.25);
+  --fuchsia:rgb(138, 30, 70)
 }
 
 * {
